test-helm.yaml
NAME: helm
LAST DEPLOYED: Sat Jul 10 21:19:27 2021
NAMESPACE: default
STATUS: pending-install
REVISION: 1
HOOKS:
---
# Source: Library/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "helm-Library-test-connection"
  labels:
    helm.sh/chart: Library-0.1.0
    app.kubernetes.io/name: Library
    app.kubernetes.io/instance: helm
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['helm-Library:80']
  restartPolicy: Never
MANIFEST:
---
# Source: Library/templates/ns-mysql.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: database
spec: {}
status: {}
---
# Source: Library/templates/ns-restapi.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: restapi
spec: {}
status: {}
---
# Source: Library/templates/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: database 
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
---
# Source: Library/templates/service-restapi.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: restapi
  name: restapi
  namespace: restapi 
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: restapi
status:
  loadBalancer: {}
---
# Source: Library/templates/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysql
  namespace: database
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---
# Source: Library/templates/restapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: restapi
  name: helm
  namespace: restapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restapi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: restapi
    spec:
      containers:
      - image: renegmedal/library:latest
        name: library
        resources: {}
status: {}

NOTES:
1. Get the application URL by running these commands:
  export POD_NAME=$(kubectl get pods --namespace default -l "app.kubernetes.io/name=Library,app.kubernetes.io/instance=helm" -o jsonpath="{.items[0].metadata.name}")
  echo "Visit http://127.0.0.1:8080 to use your application"
  kubectl --namespace default port-forward $POD_NAME 8080:80
