test-ingress.yaml
NAME: ingress
LAST DEPLOYED: Sat Jul 10 11:11:52 2021
NAMESPACE: default
STATUS: pending-install
REVISION: 1
TEST SUITE: None
HOOKS:
MANIFEST:
---
# Source: ingress-nginx/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restapi-ingress
  namespace: restapi   
spec:
  rules:
  - http:
      paths:
      - path: /apis
        pathType: Prefix
        backend:
          service:
            name: restapi
            port:
              number: 8080
